plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id 'kotlin-android-extensions'
    id 'kotlin-kapt'

    id 'maven-publish' // maven-publish 플러그인 추가
}

android {
//    compileSdkVersion 29
//    buildToolsVersion '29.0.0'
    compileSdkVersion 29
    buildToolsVersion "29.0.0"

    defaultConfig {
        applicationId "com.example.refresh_selection"
        minSdkVersion 26
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
    aaptOptions {
        noCompress "tflite"
    }
    testOptions {
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
        unitTests.returnDefaultValues = true
    }
    lintOptions{
        abortOnError false
        checkReleaseBuilds false
    }
// duplication error 해결
//    packagingOptions {
//        exclude 'META-INF/native-image/**'
//        exclude 'nd4j-native.properties'
//
//        exclude 'META-INF/DEPENDENCIES'
//        exclude 'META-INF/NOTICE'
//        exclude 'META-INF/LICENSE'
//        exclude 'META-INF/LICENSE.txt'
//        exclude 'META-INF/NOTICE.txt'
//        exclude 'META-INF/ASL2.0'
//        exclude 'build.xml'
//    }
    packagingOptions {
        exclude 'META-INF/native-image/**'
        exclude  'nd4j-native.properties'

        exclude 'META-INF/DEPENDENCIES.txt'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/io.netty.versions.properties'
        exclude 'META-INF/INDEX.LIST'
        exclude 'META-INF/services/javax.imageio.spi.ImageReaderSpi'
        exclude 'META-INF/services/javax.imageio.spi.ImageWriterSpi'
        exclude 'META-INF/services/com.fasterxml.jackson.core.JsonFactory'
        exclude 'META-INF/services/javax.annotation.processing.Processor'
        pickFirst 'META-INF/maven/org.bytedeco.javacpp-presets/openblas/pom.properties'
        pickFirst 'META-INF/maven/org.bytedeco.javacpp-presets/openblas/pom.xml'
        pickFirst 'META-INF/maven/org.bytedeco.javacpp-presets/ffmpeg/pom.properties'
        pickFirst 'META-INF/maven/org.bytedeco.javacpp-presets/ffmpeg/pom.xml'
    }

}
// 새로 추가
//repositories {
//    maven { url "https://jitpack.io" }
//}

dependencies {

    def nav_version = "2.3.3"
    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
    implementation 'com.google.code.gson:gson:2.8.2'
    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
    implementation 'com.android.volley:volley:1.1.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation 'androidx.core:core-ktx:1.3.2'
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.3.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation files('libs/libDaumMapAndroid.jar')
//
    implementation "com.kakao.sdk:v2-user:2.8.1" // 카카오 로그인
    implementation "com.kakao.sdk:v2-navi:2.8.1" // 카카오내비
    //GUI 꾸미는 것
//    implementation 'com.google.android.material:material:1.0.0'
//    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'

    implementation (group: 'org.deeplearning4j', name: 'deeplearning4j-core', version: "1.0.0-M1.1") {
        exclude group: 'org.bytedeco.javacpp-presets', module: 'opencv-platform'
        exclude group: 'org.bytedeco.javacpp-presets', module: 'leptonica-platform'
        exclude group: 'org.bytedeco.javacpp-presets', module: 'hdf5-platform'
//        exclude group: 'org.nd4j', module: 'nd4j-base64'
    }
    implementation group: 'org.nd4j', name: 'nd4j-native', version: "1.0.0-M1"
    implementation group: 'org.nd4j', name: 'nd4j-native', version: "1.0.0-M1", classifier: "android-arm"
    implementation group: 'org.nd4j', name: 'nd4j-native', version: "1.0.0-M1", classifier: "android-arm64"
    implementation group: 'org.nd4j', name: 'nd4j-native', version: "1.0.0-M1", classifier: "android-x86"

//    implementation 'com.google.code.gson:gson:2.8.2'
    annotationProcessor 'org.projectlombok:lombok:1.16.16'

//    implementation 'com.google.code.findbugs:annotations:3.0.1', {
//        exclude module: 'jsr305'
//        exclude module: 'jcip-annotations'
//    }

    //This corrects for a junit version conflict.
    configurations.all {
        resolutionStrategy.force 'junit:junit:4.12'

    }


//    implementation 'com.google.android.gms:play-services-fitness:18.0.0'
//    implementation 'com.google.android.gms:play-services-auth:19.0.0'
//    implementation files('libs\\nd4j-native-1.0.0-M1.jar')
//    def nav_version = "2.3.3"
//    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
//    implementation 'com.google.code.gson:gson:2.8.2'
//    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
//    implementation 'com.android.volley:volley:1.1.0'
//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
//    implementation 'androidx.core:core-ktx:1.3.2'
//    implementation 'androidx.appcompat:appcompat:1.2.0'
//    implementation 'com.google.android.material:material:1.3.0'
//    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
//
//    testImplementation 'junit:junit:4.+'
//    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
//    // 텐서 플로우 라이트 모듈
//    implementation fileTree(dir: 'libs', include: ['*.jar'])
////    implementation 'com.android.support:appcompat-v7:28.0.0'
//
//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.3.0'
//    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
////    testImplementation 'junit:junit:4.10'
//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
////    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
////    implementation 'org.tensorflow:tensorflow-lite:+'
//    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
//    // 카카오맵 API 사용
//    implementation files('libs/libDaumMapAndroid.jar')
//
//    implementation "com.kakao.sdk:v2-user:2.8.1" // 카카오 로그인
//    implementation "com.kakao.sdk:v2-navi:2.8.1" // 카카오내비
//    //GUI 꾸미는 것
////    implementation 'com.google.android.material:material:1.0.0'
//    implementation 'com.google.code.gson:gson:2.8.5'
//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
//
//
//    implementation group: 'org.bytedeco', name: 'javacv', version: '1,3.2'
//    implementation (group: 'org.deeplearning4j', name: 'deeplearning4j-core', version: '1.0.0-M1') {
//        exclude group: 'org.bytedeco', module: 'opencv-platform'
//        exclude group: 'org.bytedeco', module: 'leptonica-platform'
//        exclude group: 'org.bytedeco', module: 'hdf5-platform'
//    }
//
//    implementation group: 'org.deeplearning4j', name: 'deeplearning4j-modelimport', version: '1.0.0-M1'
//    implementation files('libs/nd4j-native-platform-1.0.0-M1.jar')
//    implementation files('libs/nd4j-native-1.0.0-M1.jar')
//
//
//
////    implementation "androidx.multidex:multidex:2.0.1"
////    implementation 'androidx.multidex:multidex:2.0.1'
//    implementation('org.slf4j:slf4j-api:1.7.1'){
//        exclude group: "ch.qos.logback", module: 'logback-classic'
//    }




}